kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firstweek
  labels:
    name: firstweek
    environment: production
